feature: percent change

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     position: absolute;
     margin: 200px auto 0;
     perspective: 1500px;
-    top: 10px;
-    left: 60%;
+    top: 30%;
+    left: 40%;
   }
   .box{
       width: 200px;
@@ -109,7 +109,7 @@
     position: absolute;
     z-index: 10;
     top: 10px;
-    left: 10px;
+    left: 30%;
 }
   
   </style>
