--- a/index.html
+++ b/index.html
@@ -83,17 +83,19 @@ handleData = (req1, req2) => {
     handleReq = (obj1, obj2, hasTab) => {
         let temps = ``;
         for (const key in obj1) {
-        if (Array.isArray(obj2[key]) && obj2[key].length !== 0) {
-            temps += `\n/** 详情 */\n${key}: {${handleReq(obj1[key][0], obj2[key][0], true)}\n}[];`;
-        } else if (Array.isArray(obj2[key]) && obj2[key].length === 0) {
-            temps += `\n/** ${obj1[key]} */\n${key}: [];`
-        } else {
-            if (hasTab) {
-            temps += `\n  /** ${obj1[key]} */\n  ${key}: ${typeof obj2[key]};`
-            } else {
-            temps += `\n/** ${obj1[key]} */\n${key}: ${typeof obj2[key]};`
-            }
-        }
+          if (Array.isArray(obj2[key]) && obj2[key].length !== 0) {
+              temps += `\n/** 详情 */\n${key}: {${handleReq(obj1[key][0], obj2[key][0], true)}\n}[];`;
+          } else if (Array.isArray(obj2[key]) && obj2[key].length === 0) {
+              temps += `\n/** ${obj1[key]} */\n${key}: [];`
+          } else if (typeof obj2[key] === "object") {
+              temps += `\n/** ${obj1[key]} */\n${key}: {\n ${handleReq(obj1[key], obj2[key])} \n}` ;
+          } else {
+              if (hasTab) {
+              temps += `\n  /** ${obj1[key]} */\n  ${key}: ${typeof obj2[key]};`
+              } else {
+              temps += `\n/** ${obj1[key]} */\n${key}: ${typeof obj2[key]};`
+              }
+          }
         }
         return temps;
     }
