--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 </head>
 <body>
   <div id="box">
-      <textarea id="menus">
+      <!-- <textarea id="menus">
         盖浇饭 砂锅 大排档 米线 满汉全席 西餐 麻辣烫 自助餐 炒面 快餐 水果 西北风 馄饨 火锅 烧烤 泡面 水饺 日本料理 涮羊肉 味千拉面 面包 扬州炒饭 自助餐 菜饭骨头汤 茶餐厅 海底捞 西贝莜面村 披萨 麦当劳 KFC 汉堡王 卡乐星 兰州拉面 沙县小吃 烤鱼 烤肉 海鲜 铁板烧 韩国料理 粥 快餐 萨莉亚 桂林米粉 东南亚菜 甜点 农家菜 川菜 粤菜 湘菜 本帮菜 生活 全家便当 
+      </textarea> -->
+      <textarea id="menus">
+        砂锅 大排档 米线 麻辣烫 馄饨 火锅 烧烤 泡面 水饺 涮羊肉 味千拉面 扬州炒饭 海底捞 披萨 麦当劳 肯德基 汉堡王 兰州拉面 沙县小吃 烤肉 烤鱼 海鲜 铁板烧 韩国料理 冷面 烤冷面 萨莉亚 桂林米粉 过桥米线 羊肉火锅 鸭血粉丝 菜煎饼 川菜 湘菜 本帮菜 烤鸭 炸鸡 臭豆腐 螺狮粉 绝味鸭脖 鸭脖 奶茶 芋圆 三明治 手抓饼 茆茆 水果
       </textarea>
-
       <div id="food">今天吃点神马</div>
 
       <button id="btn1">随机一下</button>
